--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/.gitignore
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/.gitignore
@@ -1,9 +1,8 @@
 /target
 /local
-
+/repositories
 /src/main/gwt-unitCache/
 /src/main/webapp/WEB-INF/classes/
-/src/main/webapp/WEB-INF/deploy/
 /src/main/webapp/WEB-INF/lib/
 /src/main/webapp/org.kie.workbench.common.stunner.project.StunnerProjectShowcase/
 
@@ -15,8 +14,6 @@
 *.ipr
 *.iws
 *.iml
-**/gwt-unitCache/
 
 # Repository wide ignore mac DS_Store files
 .DS_Store
-
