--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/src/main/webapp/WEB-INF/web.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/src/main/webapp/WEB-INF/web.xml
@@ -124,6 +124,24 @@
     <url-pattern>*.erraiBus</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>UberfireFileUploadServlet</servlet-name>
+    <servlet-class>org.uberfire.server.FileUploadServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UberfireFileUploadServlet</servlet-name>
+    <url-pattern>/org.kie.workbench.common.stunner.project.StunnerProjectShowcase/defaulteditor/upload/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>UberfireFileDownloadServlet</servlet-name>
+    <servlet-class>org.uberfire.server.FileDownloadServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UberfireFileDownloadServlet</servlet-name>
+    <url-pattern>/org.kie.workbench.common.stunner.project.StunnerProjectShowcase/defaulteditor/download/*</url-pattern>
+  </servlet-mapping>
+
   <!-- security roles -->
   <security-role>
     <description>Administrator - Administrates the system.</description>
