--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/pom.xml
@@ -40,6 +40,18 @@
 
   <dependencies>
 
+    <!-- Must come before gwt-user to override servlet api -->
+    <dependency>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.kie.workbench.screens</groupId>
       <artifactId>kie-wb-common-library-client</artifactId>
@@ -208,7 +220,6 @@
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-workbench-client-views-patternfly</artifactId>
-      <scope>provided</scope>
     </dependency>
 
     <!-- UberFire Preferences Extension -->
@@ -1141,7 +1152,20 @@
       <artifactId>org.eclipse.sisu.inject</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-cdi-client</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jdt.core.compiler</groupId>
+      <artifactId>ecj</artifactId>
+      <version>4.5.1</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <finalName>${project.artifactId}</finalName>
@@ -1334,6 +1358,9 @@
             <compileSourcesArtifact>org.kie.workbench.stunner:kie-wb-common-stunner-case-mgmt-project-api</compileSourcesArtifact>
             <compileSourcesArtifact>org.kie.workbench.stunner:kie-wb-common-stunner-case-mgmt-project-client</compileSourcesArtifact>
 
+            <!--GWT dependencies for integration tests-->
+            <compileSourcesArtifact>com.google.gwt:gwt-user</compileSourcesArtifact>
+
           </compileSourcesArtifacts>
         </configuration>
         <executions>
@@ -1480,6 +1507,255 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>integration-test</id>
+      <properties>
+        <profile.testOutputDirectory>war/WEB-INF/classes</profile.testOutputDirectory>
+      </properties>
+
+      <build>
+        <testResources>
+          <testResource>
+            <directory>src/test/java</directory>
+          </testResource>
+          <testResource>
+            <directory>src/test/resources</directory>
+          </testResource>
+        </testResources>
+        <plugins>
+          <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <additionalClasspathElements>
+                <additionalClasspathElement>${basedir}/${profile.testOutputDirectory}/</additionalClasspathElement>
+                <additionalClasspathElement>${basedir}/src/test/java/</additionalClasspathElement>
+                <additionalClasspathElement>${basedir}/target/.generated/</additionalClasspathElement>
+                <additionalClasspathElement>${basedir}/.errai/</additionalClasspathElement>
+                <additionalClasspathElement>${basedir}/extra/org.kie.workbench.common.stunner.project.StunnerProjectShowcase/src/</additionalClasspathElement>
+                <additionalClasspathElement>${basedir}/extra/org.kie.workbench.common.stunner.project.StunnerProjectShowcase/src/gen/</additionalClasspathElement>
+              </additionalClasspathElements>
+              <forkMode>pertest</forkMode>
+              <!-- DO NOT REMOVE THE errai.ioc.experimental.infer_dependent_by_reachability
+                flag or the testsuite WILL fail. -->
+              <argLine>-Xmx6G -d64</argLine>
+              <systemPropertyVariables>
+                <errai.hosted_mode_testing>true</errai.hosted_mode_testing>
+                <errai.devel.nocache>true</errai.devel.nocache>
+                <org.jboss.errai.bus.do_long_poll>false</org.jboss.errai.bus.do_long_poll>
+                <errai.graph_builder.short_factory_names>false</errai.graph_builder.short_factory_names>
+                <!-- These tests must be run in devMode. When run in prod one of two problems happens:
+                      1. An exception occurs from MarshallerGenerator caching between tests in the AyncCDITests suite.
+                      2. If (1) is fixed, a GWT compilation error occurs where an interned value is referenced before being declared.
+                     In the future, if we need to run the tests with a prod compile we might be able to fix these
+                     problems by moving the async tests out of a test suite.
+                 -->
+                <gwt.args>-devMode -testBeginTimeout 5</gwt.args>
+              </systemPropertyVariables>
+              <includes>
+                <include>**/*Test.java</include>
+                <include>**/*Tests.java</include>
+              </includes>
+              <excludes>
+                <exclude>**/org/jboss/errai/cdi/async/test/**/*Test.java</exclude>
+                <exclude>**/org/jboss/errai/cdi/async/test/**/*Tests.java</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <excludes>
+                <exclude>com/google/gwt/junit/JUnitShell.java</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+
+      <dependencies>
+        <!-- Must come before gwt-user to override servlet api -->
+        <dependency>
+          <groupId>org.jboss.spec.javax.servlet</groupId>
+          <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </dependency>
+
+        <!-- Errai Core -->
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-common</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-bus</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-bus</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc</artifactId>
+          <exclusions>
+            <exclusion>
+              <groupId>javax.inject</groupId>
+              <artifactId>javax.inject</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cdi-client</artifactId>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cdi-client</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc-bus-support</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-tools</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.mvel</groupId>
+          <artifactId>mvel2</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.el</artifactId>
+          <scope>test</scope>
+          <version>3.0.0</version>
+        </dependency>
+        <!-- Weld Modules -->
+        <dependency>
+          <groupId>org.jboss.weld</groupId>
+          <artifactId>weld-core</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.weld.se</groupId>
+          <artifactId>weld-se-core</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.weld.servlet</groupId>
+          <artifactId>weld-servlet-core</artifactId>
+          <scope>test</scope>
+        </dependency>
+
+        <!-- GWT and GWT Extensions -->
+        <dependency>
+          <groupId>com.google.gwt</groupId>
+          <artifactId>gwt-user</artifactId>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>com.google.gwt</groupId>
+          <artifactId>gwt-dev</artifactId>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+          <classifier>sources</classifier>
+          <scope>compile</scope>
+        </dependency>
+
+        <!-- Runtime / Container dependencies -->
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <scope>test</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss</groupId>
+          <artifactId>jboss-common-core</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-data-binding</artifactId>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.eclipse.jdt.core.compiler</groupId>
+          <artifactId>ecj</artifactId>
+          <version>4.5.1</version>
+        </dependency>
+
+        <dependency>
+          <groupId>org.kie.workbench.stunner</groupId>
+          <artifactId>kie-wb-common-stunner-core-api</artifactId>
+          <classifier>sources</classifier>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cdi-client</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
