--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/pom.xml
@@ -1501,6 +1501,8 @@
       <id>integration-test</id>
       <properties>
         <profile.testOutputDirectory>war/WEB-INF/classes</profile.testOutputDirectory>
+        <gwtArgs>-prod -userAgents gecko1_8 -runStyle Selenium:127.0.0.1:4444/*firefox</gwtArgs>
+        <argLine>-Dgwt.args="${gwtArgs}"</argLine>
       </properties>
 
       <build>
@@ -1513,6 +1515,30 @@
           </testResource>
         </testResources>
         <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>selenium-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>start</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start-server</goal>
+                </goals>
+                <configuration>
+                  <background>true</background>
+                </configuration>
+              </execution>
+
+              <execution>
+                <id>stop</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop-server</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
@@ -1574,6 +1600,17 @@
       </build>
 
       <dependencies>
+        <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-firefox-driver</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-java</artifactId>
+          <scope>test</scope>
+        </dependency>
+
         <!-- Must come before gwt-user to override servlet api -->
         <dependency>
           <groupId>org.jboss.spec.javax.servlet</groupId>
@@ -1721,12 +1758,6 @@
           <version>4.5.1</version>
         </dependency>
 
-        <dependency>
-          <groupId>org.kie.workbench.stunner</groupId>
-          <artifactId>kie-wb-common-stunner-core-api</artifactId>
-          <classifier>sources</classifier>
-        </dependency>
-
         <dependency><groupId>org.kie.soup</groupId><artifactId>kie-soup-project-datamodel-api</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.soup</groupId><artifactId>kie-soup-project-datamodel-commons</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.screens</groupId><artifactId>kie-wb-common-library-client</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
@@ -1779,7 +1810,6 @@
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-adf-base</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-adf-engine-api</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-adf-engine-client</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
-        <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-fields</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-fields</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-processing-engine</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
         <dependency><groupId>org.kie.workbench.forms</groupId><artifactId>kie-wb-common-forms-common-rendering-shared</artifactId><classifier>sources</classifier><version>7.8.0-SNAPSHOT</version></dependency>
