skip unused Persistance

--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/src/test/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-showcase-project/src/test/resources/META-INF/ErraiApp.properties
@@ -31,4 +31,5 @@
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
 errai.ioc.enabled.alternatives=org.jboss.errai.validation.client.dynamic.DynamicValidator
+errai.marshalling.nonserializableTypes=org.uberfire.backend.server.cdi.workspace.WorkspaceManagerPreferencesPortableGeneratedImpl
 
